# MATI

./: .gitignore  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflow-actions/cleanup/: action.yml
.github/workflow-actions/cleanup-mati/: action.yml
.github/workflow-actions/setup/: action.yml
.github/workflow-actions/setup-mati/: action.yml
.github/workflows/: check_format.yml  check_license.yml  test_coverage.yml  test_examples.yml  test_requirements.yml
examples/: mat_v7_flat_signals.mat  mat_v7_flat_timeseries.mat
mati/: mati.py  version.py
scripts/: analyze_dependencies.py
test/: test_mati.py
