[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mati"
description = "*.mat file interface"
readme = "README.md"
authors = [
  {name = "Andrä Carotta"},
  {name = "Jonas Bleich"},
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
keywords = ["mat"]
classifiers = [
    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",

    # Topic
    "Topic :: Scientific/Engineering",

    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",

    # License
    "License :: OSI Approved :: Apache Software License",

    # Operating System
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",

    # Environment
    "Environment :: Console",
]
dependencies = [
    "h5py>=3.16.0",
    "scipy>=1.17.1",
    "typeguard>=4.4.4",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]
dev = [
    "ruff>=0.15.8",
    "debugpy>=1.8.20",
    "pip-licenses>=5.5.1",
    "pipdeptree>=2.34.0",
    "mati[test]",
]

[tool.hatch.build.targets.wheel]
packages = ["mati"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mati/version.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
addopts = [
    "--ignore=test/examples",
]

[tool.ruff]
# The maximum line length.
line-length = 88
# The target Python version.
target-version = "py313"
# Excluded files and directories.
exclude = [
    "version.py",
    ".venv",
]

[tool.ruff.format]
# The preferred quote style.
quote-style = "double"
# The preferred indentation style.
indent-style = "space"

[tool.pyright]
# Pyright will analyze files in this directory.
include = ["mati", "test"]
reportAny = "none"
reportExplicitAny = "none"
venvPath = "."
venv = ".venv"
